# guide_app

./: .env.example  .gitignore  ADMIN_ENHANCEMENT_SUMMARY.md  ADMIN_INTERFACE_GUIDE.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP.md  PROJECT_UPDATE_SUMMARY.md  README.md  create_sample_data.py  pyproject.toml  request_payload.txt  requirements.txt  test_api_endpoints.sh  test_auth.py  test_login.py  test_new_endpoints.py  test_oauth.py  test_profile_endpoints.sh
backend/: settings.py  urls.py
core/: admin.py  models.py  oauth_utils.py  serializers.py  urls.py  views.py
core/management/commands/: setup_admin_theme.py
core/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_category_guide.py  0003_alter_user_email.py  0003_comment_bookmark_follow_like_step.py  0004_delete_destination.py  0005_user_facebook_id_user_google_id_user_provider_and_more.py  0006_agency_average_rating_agency_description_and_more.py  0007_alter_agency_options_alter_tourist_options_and_more.py
core/templates/admin/: index.html
