[tool.poetry]
name = "guide-app"
version = "0.1.0"
description = ""
authors = ["nn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
